Ajout d'une partie sur l'entreprise

--- a/Global.tex
+++ b/Global.tex
@@ -75,14 +75,17 @@
 
 \input{Intro}
 
-% La gestion de version
+% L'entreprise
 \input{Partie1}
 
-% Création d'IITAMP
+% La gestion de version
 \input{Partie2}
 
-% Mise en oeuvre d'IITAMP
+% Création d'IITAMP
 \input{Partie3}
+
+% Mise en oeuvre d'IITAMP
+\input{Partie4}
 
 \input{Conclusion}
 
