Mise en forme du chapitre sur les entreprises

--- a/Partie1.tex
+++ b/Partie1.tex
@@ -1,4 +1,93 @@
-\chapter{L'entreprise} % (fold)
-\label{cha:L'entreprise}
+\chapter{Les entreprises} % (fold) \label{cha:Les entreprises}
 
-% chapter L'entreprise (end)
+\begin{it}
+
+Ce chapitre illustre les entreprises dans lequels j'ai évolué. Dans un
+premier temps \emph{IdentIt} m'a acceuilli pour le premier stage puis
+dans un second temp ce sont les deux entreprises \emph{IdentIt-A2SI}. Je
+présente aussi l'entreprise \emph{Syngenta} qui acceuil mon projet de
+stage IITAMP qui est décrit dans le chapitre \ref{cha:Mise en oeuvre
+d'IITAMP}.
+
+\end{it}
+
+\section{Les entreprises d'accueils} % (fold)
+\label{sec:Les entreprises d'aceuils}
+
+\subsection{IdentIt} % (fold)
+\label{sub:IdentIt}
+
+\emph{IdentIt} est une SARL d'édition de logiciels spécialisé dans
+l'informatique industrielle et des systèmes d'identification par
+radio-fréquence RFID\,\footnote{\emph{Radio Frequency IDentification.}}.
+Elle est composée de quatre personnes et se situai à Petite-Synthe
+durant mon premier stage. \bsc{M.~Dubourg} et \bsc{M.~Lesage} sont les
+fondateurs de cette structure, le premier s'occupe de la partie
+technique en tant que chef de projet et le second de la partie gestion
+de l'entreprise. Ils sont accompagnés par deux développeurs, l'un
+travaillant sur des solutions Windows Mobile, l'autre étant plus
+spécialisé sur le développement Web.
+
+% subsection IdentIt (end)
+
+\subsection{A2SI} % (fold)
+\label{sub:A2SI}
+
+\emph{A2SI}, implantée au coeur du tissu industriel dunkerquois, est une
+entreprise spécialisée dans l’étude et la réalisation de projets
+d’automatisation, de régulation et d’instrumentation de process
+industriels. Son équipe est composée de 3 ingénieurs et de 3
+techniciens, met ses atouts au service de la qualité du travail et de la
+satisfaction des clients, tant en France qu’à l’étranger. Cette
+entreprise ce situai dans la rue de la république à Saint Pol Sur Mer.
+
+% subsection A2SI (end)
+
+\subsection{La fusion} % (fold)
+\label{sub:La fusion}
+
+\emph{IdentIt} est une sous-cursale d'\emph{A2SI} qui fut crée pour
+répondre aux besoins de solutions informatiques toujours plus grand dans
+les industries. Ceux-ci ont tout d'abord enménagé à Petite-Synthe
+pendant deux ans dans une pièce d'approximativement vingt-cinq mètres carrées
+pour quatre personnes ce qui n'était pas évident lorsque l'on acceuil
+une personne supplémentaire, nous étions un peu sérré.
+
+Au cours du deuxième stage, les entreprises ont \og fusionné \fg{} dans
+de nouveau locaux dans la zone industrielle de Saint Pol Sur Mer. Cela
+ma permis de vivre une fusion d'entreprise, d'évoluer dans un grand
+batiment neuf d'a peu près cinq-cent mètres carrées ainsi que de
+connaitres de nouvelles personnes.
+
+% subsection La fusion (end)
+
+% section Les entreprises d'aceuils (end)
+
+\section{L'entreprise cliente} % (fold)
+\label{sec:L'entreprise cliente}
+
+Le groupe Syngenta est un des leaders mondiaux de l’agrofourniture.
+Ce groupe développe une approche par culture reposant sur 2 piliers,
+d'une part la création, le développement et la commercialisation de
+variétés pour les productions agricoles majeures, d'autre part la
+protection des plantes.
+
+\begin{description}
+
+  \item[production de variétés pour l'agriculture :] betterave à sucre,
+    céréales à paille (blé tendre, blé dur, orge de printemps, orge
+    hybride), fleurs, légumes (pour le marché du frais et de
+    l’industrie), maïs, oléagineux (tournesol et colza) et les cultures
+    légumières.
+
+  \item[Le traitement des plantes :] Une combinaison de solutions
+    phytopharmaceutiques contre les principaux ravageurs et nuisibles
+    des cultures à base de produits de protection des semences,
+    d’herbicides, de fongicides et d’insecticides mais aussi d’insectes
+    auxiliaires.
+
+\end{description}
+
+% section L'entreprise cliente (end)
+
+% chapter Les entreprises (end)
