Introduction du chapitre refaite

--- a/Partie2.tex
+++ b/Partie2.tex
@@ -2,25 +2,29 @@
 \label{cha:La gestion de version}
 
 \begin{it}
-Les logiciels de gestion de versions ou VCS\, \footnote{\emph{Version
-Control System.}} sont utilisés principalement par les développeurs. En
-effet, ils sont quasi exclusivement utilisés pour gérer des codes
-sources, car ils sont capables de suivre l’évolution d’un fichier texte
-\emph{ligne de code par ligne de code.} Ces logiciels sont fortement
-conseillés pour gérer un projet informatique.
+J'ai eu pour objectif de déployer un nouvel outil de gestion de version
+dans l'entreprise. Cette partie évoque les détails de cette mise en
+\oe{}uvre.
 \end{it}
 
 \section{Git : Le gestionnaire de code source} % (fold)%{{{
 \label{sec:Git : Le gestionnaire de code source}
 
-\lettrine{L}{es} gestionnaires de versions retiennent qui a effectué
-chaque modification de chaque fichier et pourquoi. Ils sont par
-conséquent capables de dire qui a écrit chaque ligne de chaque fichier
-et dans quel but ; si deux personnes travaillent simultanément sur un
-même fichier, ils sont capables de fusionner leurs modifications et
-d’éviter que le travail d’une de ces personnes ne soit écrasé. La
-figure~\ref{flow} qui ce trouve en page \pageref{flow} illustre
-basiquement l'utilisation de Git.
+\lettrine{L}{es} logiciels de gestion de versions ou VCS\,
+\footnote{\emph{Version Control System.}} sont utilisés principalement
+par les développeurs. En effet, ils sont quasi exclusivement utilisés
+pour gérer des codes sources, car ils sont capables de suivre
+l’évolution d’un fichier texte \emph{ligne de code par ligne de code.}
+Ces logiciels sont fortement conseillés pour gérer un projet
+informatique.
+
+Ceux-ci retiennent qui a effectué chaque modification de chaque fichier
+et pourquoi. Ils sont par conséquent capables de dire qui a écrit chaque
+ligne de chaque fichier et dans quel but ; si deux personnes travaillent
+simultanément sur un même fichier, ils sont capables de fusionner leurs
+modifications et d’éviter que le travail d’une de ces personnes ne soit
+écrasé. La figure~\ref{flow} qui ce trouve en page \pageref{flow}
+illustre basiquement l'utilisation de Git.
 
 Ces logiciels ont donc par conséquent deux utilités principales :
 \begin{itemize}
